--- a/src/app/pages/executive-processes/donation-approval/donation-approval-list/donation-approval-list.component.html
+++ b/src/app/pages/executive-processes/donation-approval/donation-approval-list/donation-approval-list.component.html
@@ -1,1 +1,117 @@
-<p>donation-approval-list works!</p>
+<nb-card class="cat-card"> 
+
+    <nb-card-header>APROBACIÓN DE BIENES PARA DONACIÓN</nb-card-header>
+    
+<nb-card-body>
+
+      <div class="row">
+
+        <div class="col-md-4">
+          <div class="form-group">
+            <label for="" class="label">No. Expediente</label>
+            <input type="text" nbInput fullWidth id="" placeholder="">
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="form-group">
+            <label for="" class="label">Averig Previa</label>
+            <input type="text" nbInput fullWidth id="" placeholder="">
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="form-group">
+            <label for="" class="label">Causa Penal</label>
+            <input type="text" nbInput fullWidth id="" placeholder="">
+          </div>
+        </div>
+
+      </div>
+
+      <div class="row">
+
+        <div class="col-md-4">
+          <div class="form-group">
+            <label for="" class="label">Acta Circuns</label>
+            <input type="" nbInput fullWidth id="" placeholder="">
+          </div>
+        </div>
+
+        <div class="col-sm-4">
+          <div class="form-group">
+            <label for="" class="label">Toca Penal</label>
+            <input type="text" nbInput fullWidth id="" placeholder="">
+          </div>
+        </div>
+
+                
+      </div>
+
+</nb-card-body>
+
+</nb-card>
+
+<nb-card class="cat-card"> 
+
+<nb-card-body>
+
+  <ng2-smart-table class="my-table" [settings]="settings" [source]="data" ></ng2-smart-table>
+
+  <div class="row">
+
+    <div class="col-md-2">
+      <div class="form-group">
+        <label for="" class="label">&nbsp;</label>
+        <input type="" nbInput fullWidth id="" placeholder="Estado del bien:">
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="form-group">
+        <nb-radio-group status="success" [(value)]="radioGroupValue">
+          <nb-radio 
+            [value]="'Disponible'">
+            Disponible
+          </nb-radio>
+          <nb-radio
+            [value]="'No Disponible'">
+            No Disponible
+          </nb-radio>
+          </nb-radio-group>
+      </div>
+
+    </div>
+    
+    <div class="col-md-6 ">
+      <div class="form-group right">
+        <label for="" class="label">&nbsp;</label>
+        <button type="submit" nbButton>Insertar vía Archivo plano</button>
+    </div>
+
+
+  </div>
+</div>
+
+
+</nb-card-body>
+
+</nb-card>
+
+
+
+<!--
+<div class="row">
+
+<nb-layout>
+
+<nb-layout-column>
+<ng2-smart-table class="my-table" [settings]="settings" [source]="data"></ng2-smart-table>
+</nb-layout-column>
+
+</nb-layout>
+
+</div>
+-->
+
+
