--- a/src/app/@theme/styles/_layout.scss
+++ b/src/app/@theme/styles/_layout.scss
@@ -252,7 +252,7 @@
   overflow-x: visible !important;
   margin-left: -90px !important;
   border-top: 1px solid transparent !important;
-  box-shadow: inset 0 1px 0 rgb(255 255 255 / 10%) !important;
+  // box-shadow: inset 0 1px 0 rgb(255 255 255 / 10%) !important;
 }
 @media (min-width: 992px) {
   .navbar-expand-lg .navbar-collapse {
