se uso componente compartido de delegaciones y subdelegaciones en forms

--- a/src/app/pages/executive-processes/a-accumulated-assets/a-accumulated-assets-detail/a-accumulated-assets-detail.component.html
+++ b/src/app/pages/executive-processes/a-accumulated-assets/a-accumulated-assets-detail/a-accumulated-assets-detail.component.html
@@ -1,62 +1,65 @@
-<nb-card>
+
+
+<!--
+  <nb-card>
   <nb-card-body>
 
-      <form [formGroup]="form"> <!--Modificar nombre para identificar y en el boton-->
-          <div class="row">
+      <form [formGroup]="form"> 
+        <div class="row">
 
-              <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="inputFirstName" class="label">Delegación</label>
-                      <input nbInput fullWidth formControlName="description" placeholder="Nombre de Delegación">
-                  </div>
+          <div class="col-md-6">
+              <div class="form-group">
+                <label for="inputFirstName" class="label">Delegación</label>
+                  <input nbInput fullWidth formControlName="description" placeholder="Nombre de Delegación">
               </div>
+          </div>
 
-              <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="inputFirstName" class="label">SubDelegación</label>
-                      <input nbInput fullWidth disabled placeholder="nombre de SubDelegacion">
-                  </div>
+          <div class="col-md-6">
+              <div class="form-group">
+                <label for="inputFirstName" class="label">SubDelegación</label>
+                  <input nbInput fullWidth disabled placeholder="nombre de SubDelegacion">
               </div>
+          </div>
 
-              <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="inputFirstName" class="label">No.</label>
-                      <input nbInput fullWidth formControlName="id" placeholder="No. Delegacion">
-                  </div>
+          <div class="col-md-6">
+              <div class="form-group">
+                <label for="inputFirstName" class="label">No.</label>
+                  <input nbInput fullWidth formControlName="id" placeholder="No. Delegacion">
               </div>
+          </div>
 
-              <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="inputFirstName" class="label">No.</label>
-                      <input nbInput fullWidth disabled placeholder="No. Sub Delegacion" >
-                  </div>
+          <div class="col-md-6">
+              <div class="form-group">
+                <label for="inputFirstName" class="label">No.</label>
+                  <input nbInput fullWidth disabled placeholder="No. Sub Delegacion" >
               </div>
+          </div>
 
-              <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="inputFirstName" class="label">Año incial</label>
-                      <input nbInput fullWidth disabled  placeholder="Año inicial">
+          <div class="col-md-6">
+              <div class="form-group">
+                <label for="inputFirstName" class="label">Año incial</label>
+                  <input nbInput fullWidth disabled  placeholder="Año inicial">
 
-                  </div>
               </div>
+          </div>
 
-              <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="inputFirstName" class="label">Año final</label>
-                      <input nbInput fullWidth disabled  placeholder="Año final">
-                  </div>
+          <div class="col-md-6">
+              <div class="form-group">
+                <label for="inputFirstName" class="label">Año final</label>
+                  <input nbInput fullWidth disabled  placeholder="Año final">
               </div>
+          </div>
+          
+      </div>
+
+      <div class="form-group">
+          <div class="d-flex justify-content-center">
               
+                  <button type="submit" nbButton status="primary" [disabled]="!form.valid">Imprimir Reporte</button>
           </div>
+      </div>
+  </form>
 
-          <div class="form-group">
-              <div class="d-flex justify-content-center">
-                  <!--<button type="submit" nbButton status="primary" [disabled]="!form.valid"
-                      (click)="register()">{{actionBtn}}</button>  Boton con función--> 
-                      <button type="submit" nbButton status="primary" [disabled]="!form.valid">Imprimir Reporte</button>
-              </div>
-          </div>
-      </form>
-
-  </nb-card-body>
+</nb-card-body>
 </nb-card>
+-->
