--- a/src/app/pages/executive-processes/doc-re-des-area/doc-re-des-area-list/doc-re-des-area-list.component.html
+++ b/src/app/pages/executive-processes/doc-re-des-area/doc-re-des-area-list/doc-re-des-area-list.component.html
@@ -4,134 +4,86 @@
         <span class="title">
             TOTAL DE DOCUMENTOS RECIBIDOS VS ÁREA DESTINO
         </span>
-  
-  <!-- Botón para agregar nuevo desactivado por que no lo requiere
-        <div class="add-select">
-            <button (click)="openWindow()" nbButton status="primary">Nueva</button>
-        </div>
-  -->
-  
+
     </nb-card-header>
   
     <nb-card-body>
   
-     <!--Modificar nombre para identificar y en el boton-->
+        <form [formGroup]="formDelegation" (submit)="mostrarInfo()">
 
-     <div class="row">
+            <div class="row">
   
-        <div class="col-md-2">
-            <div class="form-group">
-                <label class="label">Fecha recepción del:</label>
-                
-                  <input nbInput
-                         placeholder="Selección de fecha"
-                         [nbDatepicker]="formpicker">
-                  <nb-datepicker #formpicker></nb-datepicker>
-                
-            </div>
-        </div>
-
-        <div class="col-md-2">
-            <div class="form-group">
-                <label class="label">Al</label>
-                
-                  <input nbInput
-                         placeholder="Selección de fecha"
-                         [nbDatepicker]="formpicker2">
-                  <nb-datepicker #formpicker2></nb-datepicker>
-                
-            </div>
-        </div>
-        
-            
-    </div>
-
-    <div class="row">
-  
-        <div class="col-md-1">
-            <div class="form-group">
-                <label class="label">Área Destino</label>
-                <input disabled nbInput fullWidth  placeholder="{{areaID}}">
-            </div>
-        </div>
-        
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label class="label">Selecciona Área:</label>
-                        <ng-select nbinput=""  class="ng-dropdown-panel-items scroll-host input-full-width size-medium status-basic shape-rectangle nb-transition" 
-                            [items]="areaList" 
-                            bindLabel="areaClave"
-                            bindValue="noArea" 
-                            placeholder="" 
-                            [(ngModel)]="areaID"> 
-                        </ng-select>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label class="label">Fecha recepción del:</label>
+                        
+                          <input nbInput
+                                 placeholder="Selección de fecha"
+                                 [nbDatepicker]="formpicker">
+                          <nb-datepicker #formpicker></nb-datepicker>
+                        
+                    </div>
                 </div>
-            </div>
-
-    </div>
-
-
-      <div class="row">
-  
-              <div class="col-md-2">
-                  <div class="form-group">
-                      <label class="label">Delegación</label>
-                          <ng-select nbinput=""  class="ng-dropdown-panel-items scroll-host input-full-width size-medium status-basic shape-rectangle nb-transition" 
-                              [items]="delegacionesList" 
-                              bindLabel="delegation"
-                              bindValue="noDelegation" 
-                              placeholder="" 
-                              [(ngModel)]="selectedDelegationID"> 
-                          </ng-select>
-                  </div>
-              </div>
-
-              <div class="col-md-2">
-                <div class="form-group">
-                    <label class="label">SubDelegaciones</label>
-                        <ng-select nbinput=""  class="ng-dropdown-panel-items scroll-host input-full-width size-medium status-basic shape-rectangle nb-transition" 
-                            [items]="subDelegacionesList" 
-                            bindLabel="subDelegation"
-                            bindValue="noSubDelegation" 
-                            placeholder="" 
-                            [(ngModel)]="selectedSubDelegationID"> 
-                        </ng-select>
+        
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label class="label">Al</label>
+                        
+                          <input nbInput
+                                 placeholder="Selección de fecha"
+                                 [nbDatepicker]="formpicker2">
+                          <nb-datepicker #formpicker2></nb-datepicker>
+                        
+                    </div>
                 </div>
+                
+                    
             </div>
-  
-      </div>
-  
-      <div class="row">
-
+        
+            <div class="row">
           
-              
-  
-      </div>
-  
-      <div class="row">
-  
-        <div class="col-lg-2">
-            <div class="form-group">
-                <label class="label">¿Reporte Detallado?</label> &nbsp; 
+                <div class="col-md-1">
+                    <div class="form-group">
+                        <label class="label">Área Destino</label>
+                        <input nbInput fullWidth  placeholder="">
+                    </div>
+                </div>
                 
-                  <nb-select fullWidth selected="No">
-                    <nb-option value="No">No</nb-option>
-                    <nb-option value="Si">Si</nb-option>
-                </nb-select>
-                
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label class="label">Selecciona Área:</label>
+                            <input nbInput fullWidth  placeholder="">
+                        </div>
+                    </div>
+        
             </div>
-        </div>
-      </div>
-  
-      <div class="form-group">
-          <div class="d-flex justify-content-center">
-              <!--<button type="submit" nbButton status="primary" [disabled]="!form.valid"
-                  (click)="register()">{{actionBtn}}</button>  Boton con función--> 
-                  <button type="submit" nbButton status="primary" >Imprimir Reporte</button>
-          </div>
-      </div>
-  
-  
+        
+        
+            <ngx-deleg-subdeleg-shared [form]="formDelegation"></ngx-deleg-subdeleg-shared>
+          
+              <div class="row">
+          
+                <div class="col-lg-2">
+                    <div class="form-group">
+                        <label class="label">¿Reporte Detallado?</label> &nbsp; 
+                        
+                          <nb-select fullWidth selected="No">
+                            <nb-option value="No">No</nb-option>
+                            <nb-option value="Si">Si</nb-option>
+                        </nb-select>
+                        
+                    </div>
+                </div>
+              </div>
+          
+              <div class="form-group">
+                <div class="d-flex justify-content-center">
+                        <button type="submit" nbButton status="primary" [disabled]="!formDelegation.valid">Imprimir Reporte</button>
+                </div>
+            </div>
+
+        </form>
+
   </nb-card-body>
   
   </nb-card>
