--- a/src/app/pages/executive-processes/inf-a-insured-seizures-aband/inf-a-insured-seizures-aband-list/inf-a-insured-seizures-aband-list.component.html
+++ b/src/app/pages/executive-processes/inf-a-insured-seizures-aband/inf-a-insured-seizures-aband-list/inf-a-insured-seizures-aband-list.component.html
@@ -5,101 +5,51 @@
             REPORTE INFORMACIÓN DE MODULO DE REGISTRO DE BIENES ASEGURADOS, DECOMISOS Y ABANDONOS
         </span>
   
-  <!-- Botón para agregar nuevo desactivado por que no lo requiere
-        <div class="add-select">
-            <button (click)="openWindow()" nbButton status="primary">Nueva</button>
-        </div>
-  -->
-  
     </nb-card-header>
   
     <nb-card-body>
+
+        <form [formGroup]="formDelegation" (submit)="mostrarInfo()">
+            
+            <ngx-deleg-subdeleg-shared [form]="formDelegation"></ngx-deleg-subdeleg-shared>
+        
+            <div class="row">
+        
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label class="label">Fecha recepción del:</label>
+                        
+                          <input nbInput
+                                 placeholder="Selección de fecha"
+                                 [nbDatepicker]="formpicker">
+                          <nb-datepicker #formpicker></nb-datepicker>
+                        
+                    </div>
+                </div>
+        
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label class="label">Al</label>
+                        
+                          <input nbInput
+                                 placeholder="Selección de fecha"
+                                 [nbDatepicker]="formpicker2">
+                          <nb-datepicker #formpicker2></nb-datepicker>
+                        
+                    </div>
+                </div>
+                
+                    
+            </div>
+        
+            <div class="form-group">
+                <div class="d-flex justify-content-center">
+                        <button type="submit" nbButton status="primary" [disabled]="!formDelegation.valid">Imprimir Reporte</button>
+                </div>
+            </div>
+        </form>
   
-     <!--Modificar nombre para identificar y en el boton-->
-      <div class="row">
-  
-          <div class="col-md-1">
-              <div class="form-group">
-                  <label class="label">no.</label>
-                  <input disabled nbInput fullWidth  placeholder="{{selectedDelegationID}}">
-              </div>
-          </div>
-          
-              <div class="col-md-4">
-                  <div class="form-group">
-                      <label class="label">Delegación</label>
-                          <ng-select nbinput=""  class="ng-dropdown-panel-items scroll-host input-full-width size-medium status-basic shape-rectangle nb-transition" 
-                              [items]="delegacionesList" 
-                              bindLabel="delegation"
-                              bindValue="noDelegation" 
-                              placeholder="" 
-                              [(ngModel)]="selectedDelegationID"> 
-                          </ng-select>
-                  </div>
-              </div>
-  
-      </div>
-  
-      <div class="row">
-  
-          <div class="col-md-1">
-              <div class="form-group">
-                  <label class="label">no.</label>
-                  <input disabled nbInput fullWidth  placeholder="{{selectedSubDelegationID}}">
-              </div>
-          </div>
-          
-              <div class="col-md-4">
-                  <div class="form-group">
-                      <label class="label">SubDelegaciones</label>
-                          <ng-select nbinput=""  class="ng-dropdown-panel-items scroll-host input-full-width size-medium status-basic shape-rectangle nb-transition" 
-                              [items]="subDelegacionesList" 
-                              bindLabel="subDelegation"
-                              bindValue="noSubDelegation" 
-                              placeholder="" 
-                              [(ngModel)]="selectedSubDelegationID"> 
-                          </ng-select>
-                  </div>
-              </div>
-  
-      </div>
-  
-      <div class="row">
-  
-          <div class="col-md-2">
-              <div class="form-group">
-                  <label class="label">Fecha recepción del:</label>
-                  
-                    <input nbInput
-                           placeholder="Selección de fecha"
-                           [nbDatepicker]="formpicker">
-                    <nb-datepicker #formpicker></nb-datepicker>
-                  
-              </div>
-          </div>
-  
-          <div class="col-md-2">
-              <div class="form-group">
-                  <label class="label">Al</label>
-                  
-                    <input nbInput
-                           placeholder="Selección de fecha"
-                           [nbDatepicker]="formpicker2">
-                    <nb-datepicker #formpicker2></nb-datepicker>
-                  
-              </div>
-          </div>
-          
-              
-      </div>
-  
-      <div class="form-group">
-          <div class="d-flex justify-content-center">
-              <!--<button type="submit" nbButton status="primary" [disabled]="!form.valid"
-                  (click)="register()">{{actionBtn}}</button>  Boton con función--> 
-                  <button type="submit" nbButton status="primary" >Imprimir Reporte</button>
-          </div>
-      </div>
+      
   
   
   </nb-card-body>
