--- a/src/app/pages/executive-processes/q-accumulated-goods/q-accumulated-goods-list/q-accumulated-goods-list.component.html
+++ b/src/app/pages/executive-processes/q-accumulated-goods/q-accumulated-goods-list/q-accumulated-goods-list.component.html
@@ -1,95 +1,58 @@
-<nb-card class="cat-card"> 
+<nb-card class="cat-card">
   <nb-card-header>
 
       <span class="title">
         REPORTE ACUMULADO DE BIENES TRIMESTRAL
       </span>
 
-<!-- Botón para agregar nuevo desactivado por que no lo requiere
-      <div class="add-select">
-          <button (click)="openWindow()" nbButton status="primary">Nueva</button>
-      </div>
--->
 
   </nb-card-header>
 
   <nb-card-body>
 
-   <!--Modificar nombre para identificar y en el boton-->
-    <div class="row">
+    <form [formGroup]="formDelegation" (submit)="mostrarInfo()">
 
-        <div class="col-md-1">
-            <div class="form-group">
-                <label class="label">no.</label>
-                <input disabled nbInput fullWidth  placeholder="{{selectedDelegationID}}">
-            </div>
-        </div>
-        
-            <div class="col-md-4">
+        <ngx-deleg-subdeleg-shared [form]="formDelegation"></ngx-deleg-subdeleg-shared>
+
+        <div class="row">
+
+            <div class="col-md-2">
                 <div class="form-group">
-                    <label class="label">Delegación</label>
-                        <ng-select nbinput=""  class="ng-dropdown-panel-items scroll-host input-full-width size-medium status-basic shape-rectangle nb-transition" 
-                            [items]="delegacionesList" 
-                            bindLabel="delegation"
-                            bindValue="noDelegation" 
-                            placeholder="" 
-                            [(ngModel)]="selectedDelegationID"> 
-                        </ng-select>
+                    <label class="label">Del</label>
+                    <input formControlName="fechaInicial" nbInput
+                               placeholder="Selección de fecha"
+                               [nbDatepicker]="formpicker">
+                        <nb-datepicker #formpicker></nb-datepicker>
                 </div>
+                <ngx-validation-message label="fechaInicial" 
+                         [showRequired]="fechaInicial?.errors?.required && fechaInicial.touched">
+                    </ngx-validation-message>
             </div>
-
-    </div>
-
-    <div class="row">
-
-        <div class="col-md-1">
-            <div class="form-group">
-                <label class="label">no.</label>
-                <input disabled nbInput fullWidth  placeholder="{{selectedSubDelegationID}}">
-            </div>
-        </div>
-        
-            <div class="col-md-4">
+    
+            <div class="col-md-2">
                 <div class="form-group">
-                    <label class="label">SubDelegaciones</label>
-                        <ng-select nbinput=""  class="ng-dropdown-panel-items scroll-host input-full-width size-medium status-basic shape-rectangle nb-transition" 
-                            [items]="subDelegacionesList" 
-                            bindLabel="subDelegation"
-                            bindValue="noSubDelegation" 
-                            placeholder="" 
-                            [(ngModel)]="selectedSubDelegationID"> 
-                        </ng-select>
+                    <label class="label">Al</label>
+                    <input formControlName="fechaFinal" nbInput
+                               placeholder="Selección de fecha"
+                               [nbDatepicker]="formpicker2">
+                        <nb-datepicker #formpicker2></nb-datepicker>
                 </div>
+                <ngx-validation-message label="fechaFinal" 
+                         [showRequired]="fechaFinal?.errors?.required && fechaFinal.touched">
+                </ngx-validation-message>
             </div>
-
-    </div>
-
-    <div class="row">
-
-        <div class="col-md-2">
-            <div class="form-group">
-                <label class="label">Del</label>
-                <input nbInput fullWidth>
-            </div>
-        </div>
-
-        <div class="col-md-2">
-            <div class="form-group">
-                <label class="label">Al</label>
-                <input nbInput fullWidth>
-            </div>
-        </div>
-        
             
-    </div>
-
-    <div class="form-group">
-        <div class="d-flex justify-content-center">
-            <!--<button type="submit" nbButton status="primary" [disabled]="!form.valid"
-                (click)="register()">{{actionBtn}}</button>  Boton con función--> 
-                <button type="submit" nbButton status="primary" >Imprimir Reporte</button>
+                
         </div>
-    </div>
+    
+        <div class="form-group">
+            <div class="d-flex justify-content-center">
+                    <button type="submit" nbButton status="primary" [disabled]="!formDelegation.valid">Imprimir Reporte</button>
+            </div>
+        </div>
+
+    </form>
+    
 
 
 </nb-card-body>
