--- a/src/app/pages/executive-processes/re-docs-x-sera/re-docs-x-sera-list/re-docs-x-sera-list.component.html
+++ b/src/app/pages/executive-processes/re-docs-x-sera/re-docs-x-sera-list/re-docs-x-sera-list.component.html
@@ -1,4 +1,4 @@
-<nb-card class="cat-card"> 
+<nb-card class="cat-card">   
     <nb-card-header>
   
         <span class="title">
@@ -14,55 +14,10 @@
     </nb-card-header>
   
     <nb-card-body>
-  
-     <!--Modificar nombre para identificar y en el boton-->
-      <div class="row">
-  
-          <div class="col-md-1">
-              <div class="form-group">
-                  <label class="label">no.</label>
-                  <input disabled nbInput fullWidth  placeholder="{{selectedDelegationID}}">
-              </div>
-          </div>
-          
-              <div class="col-md-4">
-                  <div class="form-group">
-                      <label class="label">Delegación</label>
-                          <ng-select nbinput=""  class="ng-dropdown-panel-items scroll-host input-full-width size-medium status-basic shape-rectangle nb-transition" 
-                              [items]="delegacionesList" 
-                              bindLabel="delegation"
-                              bindValue="noDelegation" 
-                              placeholder="" 
-                              [(ngModel)]="selectedDelegationID"> 
-                          </ng-select>
-                  </div>
-              </div>
-  
-      </div>
-  
-      <div class="row">
-  
-          <div class="col-md-1">
-              <div class="form-group">
-                  <label class="label">no.</label>
-                  <input disabled nbInput fullWidth  placeholder="{{selectedSubDelegationID}}">
-              </div>
-          </div>
-          
-              <div class="col-md-4">
-                  <div class="form-group">
-                      <label class="label">SubDelegaciones</label>
-                          <ng-select nbinput=""  class="ng-dropdown-panel-items scroll-host input-full-width size-medium status-basic shape-rectangle nb-transition" 
-                              [items]="subDelegacionesList" 
-                              bindLabel="subDelegation"
-                              bindValue="noSubDelegation" 
-                              placeholder="" 
-                              [(ngModel)]="selectedSubDelegationID"> 
-                          </ng-select>
-                  </div>
-              </div>
-  
-      </div>
+
+        <form [formGroup]="formDelegation" (submit)="mostrarInfo()">
+
+            <ngx-deleg-subdeleg-shared [form]="formDelegation"></ngx-deleg-subdeleg-shared>
   
       <div class="row">
   
@@ -98,20 +53,14 @@
         <div class="col-md-1">
             <div class="form-group">
                 <label class="label">Área Destino</label>
-                <input disabled nbInput fullWidth  placeholder="{{areaID}}">
+                <input  nbInput fullWidth  placeholder="">
             </div>
         </div>
         
             <div class="col-md-3">
                 <div class="form-group">
                     <label class="label">Seleccione Área</label>
-                        <ng-select nbinput=""  class="ng-dropdown-panel-items scroll-host input-full-width size-medium status-basic shape-rectangle nb-transition" 
-                            [items]="areaList" 
-                            bindLabel="areaClave"
-                            bindValue="noArea" 
-                            placeholder="" 
-                            [(ngModel)]="areaID"> 
-                        </ng-select>
+                    <input  nbInput fullWidth  placeholder="">
                 </div>
             </div>
 
@@ -121,31 +70,26 @@
   
         <div class="col-md-1">
             <div class="form-group">
-                <input disabled nbInput fullWidth  placeholder="{{noCoor}}">
+                <input  nbInput fullWidth  placeholder="">
             </div>
         </div>
         
             <div class="col-md-3">
                 <div class="form-group">
-                        <ng-select nbinput=""  class="ng-dropdown-panel-items scroll-host input-full-width size-medium status-basic shape-rectangle nb-transition" 
-                            [items]="coordinacionList" 
-                            bindLabel="coordinacion"
-                            bindValue="noCoordinacion" 
-                            placeholder="" 
-                            [(ngModel)]="noCoor"> 
-                        </ng-select>
+                    <input  nbInput fullWidth  placeholder="">
                 </div>
             </div>
 
     </div>
   
-      <div class="form-group">
-          <div class="d-flex justify-content-center">
-              <!--<button type="submit" nbButton status="primary" [disabled]="!form.valid"
-                  (click)="register()">{{actionBtn}}</button>  Boton con función--> 
-                  <button type="submit" nbButton status="primary" >Imprimir Reporte</button>
-          </div>
-      </div>
+    <div class="form-group">
+        <div class="d-flex justify-content-center">
+                <button type="submit" nbButton status="primary" [disabled]="!formDelegation.valid">Imprimir Reporte</button>
+        </div>
+    </div>
+        </form>
+  
+    
   
   
   </nb-card-body>
