--- a/src/app/@components/select/select.component.html
+++ b/src/app/@components/select/select.component.html
@@ -1,1 +1,8 @@
-<p>select works!</p>
+<ng-container [formGroup]="form">
+    <ng-select #select  [clearable]="false" class="col-md-12 px-0 custom" [items]="buffer" [bindLabel]="label" [hideSelected]="true"
+        [bindValue]="value" [minTermLength]="1" [loading]="loading" typeToSearchText="Escriba 3 o mas caracteres"
+        [typeahead]="input$" notFoundText="No se encontraron elementos" [virtualScroll]="true"
+        [formControlName]="control"
+        (scrollToEnd)="fetchMore(select.searchTerm)" (change)="onChange($event)">
+    </ng-select>
+</ng-container>
