template compartidos agregados

--- a/src/app/@components/deleg-subdeleg-shared/deleg-subdeleg-shared.component.html
+++ b/src/app/@components/deleg-subdeleg-shared/deleg-subdeleg-shared.component.html
@@ -5,7 +5,7 @@
             <div class="form-group"> 
                     <label class="label">Delegación</label>
                     <ng-select  nbinput=""  
-                                class="ng-dropdown-panel-items scroll-host input-full-width size-medium status-basic shape-rectangle nb-transition" 
+                                class="custom ng-dropdown-panel-items scroll-host input-full-width size-medium status-basic shape-rectangle nb-transition"  
                                 [items]="delegations$ | async" 
                                 bindValue="id"
                                 [loading]="delegationsLoading"
