--- a/src/app/pages/executive-processes/destruction-authorization/destruction-authorization-list/destruction-authorization-list.component.html
+++ b/src/app/pages/executive-processes/destruction-authorization/destruction-authorization-list/destruction-authorization-list.component.html
@@ -1,59 +1,11 @@
 <nb-card class="cat-card"> 
 
           <nb-card-header>AUTORIZACIÓN DE BIENES PARA DESTRUCCIÓN</nb-card-header>
+         
           
     <nb-card-body>
 
-            <div class="row">
-
-              <div class="col-md-4">
-                <div class="form-group">
-                  <label for="" class="label">No. Expediente</label>
-                  <input type="text" nbInput fullWidth id="" placeholder="">
-                </div>
-              </div>
-
-              <div class="col-md-4">
-                <div class="form-group">
-                  <label for="" class="label">Averig Previa</label>
-                  <input type="text" nbInput fullWidth id="" placeholder="">
-                </div>
-              </div>
-
-              <div class="col-md-4">
-                <div class="form-group">
-                  <label for="" class="label">Causa Penal</label>
-                  <input type="text" nbInput fullWidth id="" placeholder="">
-                </div>
-              </div>
-
-            </div>
-
-            <div class="row">
-
-              <div class="col-md-4">
-                <div class="form-group">
-                  <label for="" class="label">Acta Circuns</label>
-                  <input type="" nbInput fullWidth id="" placeholder="">
-                </div>
-              </div>
-
-              <div class="col-sm-4">
-                <div class="form-group">
-                  <label for="" class="label">Toca Penal</label>
-                  <input type="text" nbInput fullWidth id="" placeholder="">
-                </div>
-              </div>
-
-              <div class="col-md-4">
-
-                <div class="form-group right">
-                  <label for="" class="label">&nbsp;</label>
-                  <button fullWidth type="submit" nbButton status="primary">Agregar Bienes</button>
-                </div>
-              </div>
-              
-            </div>
+             <ngx-file-number-shared></ngx-file-number-shared>
 
     </nb-card-body>
 
