--- a/src/app/@theme/styles/styles.scss
+++ b/src/app/@theme/styles/styles.scss
@@ -19,6 +19,16 @@
 @import './overrides';
 
 
+  // @import '~@ng-select/ng-select/themes/ant.design.theme.css';
+
+  // @import '~@ng-select/ng-select/themes/default.theme.css';
+
+
+
+  // @import '~@ng-select/ng-select/themes/material.theme.css';
+
+
+
 // install the framework and custom global styles
 @include nb-install() {
 
