--- a/src/app/pages/executive-processes/info-goods-type-subtype/info-goods-type-subtype-list/info-goods-type-subtype-list.component.html
+++ b/src/app/pages/executive-processes/info-goods-type-subtype/info-goods-type-subtype-list/info-goods-type-subtype-list.component.html
@@ -1,54 +1,39 @@
-<nb-card class="cat-card">  
+<!-- <nb-card class="cat-card">
 
     <nb-card-header>
-        Prueba de Delegaciones y SubDelegaciones
+       PÁGINA DE PRUEBAS
     </nb-card-header>
 
-  
+
     <nb-card-body>
 
-        <form [formGroup]="formDelegation" (submit)="mostrarInfo()">
 
 
-            <ngx-deleg-subdeleg-shared [form]="formDelegation"></ngx-deleg-subdeleg-shared>
-            
-             
-            <div class="row">
 
-                <div class="col-md-2">
-                    <div class="form-group">
-                        <label class="label">Fecha inicial</label>
-                        <input nbInput fullWidth formControlName="fechaInicial" >
-                    </div>
-                    <ngx-validation-message label="fechaInicial" 
-                         [showRequired]="fechaInicial?.errors?.required && fechaInicial.touched">
-                    </ngx-validation-message>
-                </div>
-
-                <div class="col-md-2">
-                    <div class="form-group">
-                        <label class="label">Fecha Final</label>
-                        <input nbInput fullWidth formControlName="fechaFinal"  >
-                    </div>
-                    <ngx-validation-message label="fechaFinal" 
-                         [showRequired]="fechaFinal?.errors?.required && fechaFinal.touched">
-                    </ngx-validation-message>
-                </div>
-
-    
-            </div>
-
-                <div class="form-group">
-                    <div class="d-flex justify-content-center">
-                        <button type="submit" nbButton status="primary" [disabled]="!formDelegation.valid" >Mostrar datos</button>
-                        <!--[disabled]="!formDelegation.valid"-->
-                    </div>
-                </div>
-
-        </form>
 
     </nb-card-body>
 
-</nb-card>
+</nb-card> -->
 
-    
+<p>
+    In this example we are loading many items but only ~30 of them are rendered in the DOM.
+    This allows to load as big data as you want.
+</p>
+
+<ng-select [items]="photosBuffer"
+           [virtualScroll]="true"
+           [loading]="loading"
+           bindLabel="title"
+           bindValue="thumbnailUrl"
+           placeholder="Select photo"
+           appendTo="body"
+           (scroll)="onScroll($event)"
+           (scrollToEnd)="onScrollToEnd()">
+    <ng-template ng-header-tmp>
+        <small class="form-text text-muted">Loaded {{photosBuffer.length}} of {{photos.length}}</small>
+    </ng-template>
+    <ng-template ng-option-tmp let-item="item" let-index="index">
+        <b>{{index}}</b> {{item.title}}
+    </ng-template>
+</ng-select>
+
