componentes compartidos agregados

--- a/src/app/@components/file-number-shared/file-number-shared.component.html
+++ b/src/app/@components/file-number-shared/file-number-shared.component.html
@@ -60,13 +60,13 @@
           
         </div>
     
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
     
           <div class="form-group right">
             <label for="" class="label">&nbsp;</label>
             <button fullWidth type="submit" nbButton status="primary" [disabled]="!formExpediente.valid">Agregar Bienes</button>
           </div>
-        </div>
+        </div> -->
         
       </div>
 
