--- a/src/app/@components/deleg-subdeleg-shared/deleg-subdeleg-shared.component.html
+++ b/src/app/@components/deleg-subdeleg-shared/deleg-subdeleg-shared.component.html
@@ -5,7 +5,7 @@
             <div class="form-group"> 
                     <label class="label">Delegación</label>
                     <ng-select  nbinput=""  
-                                class="custom ng-dropdown-panel-items scroll-host input-full-width size-medium status-basic shape-rectangle nb-transition"  
+                                class="ng-dropdown-panel-items scroll-host input-full-width size-medium status-basic shape-rectangle nb-transition"  
                                 [items]="delegations$ | async" 
                                 bindValue="id"
                                 [loading]="delegationsLoading"
@@ -15,10 +15,10 @@
                                 [formControlName]="nomDeleg"
                                 notFoundText="No se encontraron elementos">
                                 <ng-template ng-label-tmp let-item="item">
-                                    {{item.id}} | {{item.name}}
+                                    {{item.id}} - {{item.name}}
                                 </ng-template>
                                 <ng-template ng-option-tmp let-item="item" let-index="index" let-search="searchTerm">
-                                    <div>{{item.id}} | {{item.name}} </div>
+                                    <div>{{item.id}} - {{item.name}} </div>
                                     
                                 </ng-template> 
 
@@ -42,10 +42,10 @@
                                 [formControlName]="nomSubDel"
                                 notFoundText="No se encontraron elementos">
                                 <ng-template ng-label-tmp let-item="item">
-                                    {{item.id}}  {{item.name}}
+                                    {{item.id}} - {{item.name}}
                                 </ng-template>
                                 <ng-template ng-option-tmp let-item="item" let-index="index" let-search="searchTerm">
-                                    <div>{{item.id}}  {{item.name}} </div>
+                                    <div>{{item.id}} - {{item.name}} </div>
                                     
                                 </ng-template> 
 
